# multi-agent-wardrobe

./: .gitignore  DEPLOYMENT.md  fashion-intelligence-analysis.html
backend/: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  storage.py
backend/app/agents/: __init__.py  base.py  color_agent.py  constants.py  context_agent.py  contracts.py  orchestrator.py  style_agent.py  wardrobe_agent.py
backend/app/api/: schemas.py
backend/app/bootstrap/: __init__.py  default_user.py
backend/app/db/: migrate.py  models.py  session.py
backend/app/domain/: __init__.py  entities.py  enums.py  scoring.py
backend/app/evidence/: __init__.py  registry.py  rules.py
backend/app/frontend/: index.html
backend/app/models/: __init__.py  profile.py
backend/app/routers/: __init__.py  analytics.py  auth.py  profile.py  suggestions.py
backend/app/services/: __init__.py  calendar_service.py  claude_wardrobe_vision.py  color_math.py  gap_reasoning.py  hf_vision_service.py  llm_reasoning.py  recommendation_service.py  vector_retrieval.py  (+3 more)
backend/data/: inventory_sample.csv
backend/scripts/: import_inventory_csv.py  init_inventory_db.py
backend/tests/: conftest.py  test_api.py  test_color_agent.py  test_context_agent.py  test_evidence.py  test_gap_analysis_agent.py  test_orchestrator.py  test_style_agent.py  test_suggestions_router.py  test_temporal_intelligence.py  test_vector_retrieval_prioritization.py  test_vision_pipeline.py  test_weather_service.py
(+39 files in other folders)
